# hw-challenge

./: README.md  docker-compose.yml
.github/workflows/: run-tests.yml
backend/: .env.example  .flake8  Dockerfile  Makefile  pyproject.toml
backend/apps/movies/: admin.py  serializers.py  urls.py  views.py
backend/apps/movies/fixtures/: genres.json
backend/apps/movies/models/: Genre.py  Movie.py
backend/apps/movies/test/: test_serializers.py  test_views.py
backend/backend/: settings.py
backend/core/project/: urls.py
backend/core/project/settings/: __init__.py
backend/core/project/settings/components/: common.py  database.py  logging.py
backend/movies/: serializers.py  urls.py  views.py
backend/movies/fixtures/: movies.json
backend/movies/migrations/: 0001_initial.py
backend/movies/models/: Movie.py
backend/movies/test/: test_serializers.py  test_views.py
e2e/: package.json  pnpm-lock.yaml
e2e/cypress/e2e/: home.cy.js  movie-detail.cy.js
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/config/: setupTests.js
frontend/src/: App.tsx  index.css
frontend/src/components/Button/: Button.tsx
frontend/src/components/Input/: Input.tsx
frontend/src/components/Layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/icons/: ArrowIcon.tsx  DribbbleIcon.tsx  (+10 more)
frontend/src/pages/: HomePage.tsx  MovieDetailPage.tsx
frontend/src/router/: index.tsx
frontend/src/services/: httpClient.ts  movieApi.ts
frontend/src/store/: store.ts
(+39 files in other folders)
